[project]
name = "purejaxrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "distrax>=0.1.5",
    "flashbax>=0.1.3",
    "flax>=0.10.6",
    "gymnax>=0.0.9",
    "jax[cuda12]==0.6.2",
    "optax>=0.2.5",
    "playground>=0.0.5",
    "wandb>=0.20.1",
]
